--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://hblitza.github.io/MapProxy_Workshop_Praxiseinsatz/"
 languageCode = "de-de"
 title = "im Praxiseinsatz"
 
